Some bugfixes and code cleanup

--- a/resources/translations_bs.properties
+++ b/resources/translations_bs.properties
@@ -14,3 +14,4 @@ namingtitle = Imenovanje
 overwritetitle = Prepisati preko fajla?
 overwritetext = Jeste li sigurni da #elite prepisati fajl preko vec postojeceg fajla?
 doterror = Direktorij ne moze imati . u imenu
+renameText = Unesite novo ime
