--- a/resources/translations_de.properties
+++ b/resources/translations_de.properties
@@ -15,3 +15,4 @@ overwritetitle = Die Datei Überschreiben?
 overwritetext = Sind Sie sich sicher dass Sie diese Datei überschreiben möchten?
 duplicateerror = Es können keine Datein mit desselben Namen in den selben Ordner sein.
 doterror = Ordner können keine . im Namen haben
+renameText = Geben Sie den neuen Namen ein
