Prevented naming two subjects with the same name

--- a/resources/translations_de.properties
+++ b/resources/translations_de.properties
@@ -16,3 +16,4 @@ overwritetext = Sind Sie sich sicher dass Sie diese Datei überschreiben möchten?
 duplicateerror = Es können keine Datein mit desselben Namen in den selben Ordner sein.
 doterror = Ordner können keine . im Namen haben
 renameText = Geben Sie den neuen Namen ein
+nameerror = Zwei Fächer können nicht den selben Namen haben
