--- a/resources/translations_bs.properties
+++ b/resources/translations_bs.properties
@@ -15,3 +15,4 @@ overwritetitle = Prepisati preko fajla?
 overwritetext = Jeste li sigurni da #elite prepisati fajl preko vec postojeceg fajla?
 doterror = Direktorij ne moze imati . u imenu
 renameText = Unesite novo ime
+nameerror = Dva predmeta ne mogu imati isto ime
